# mini-game-os

./: .gdbinit  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  config.txt  kernel7.elf  kernel8.img  logo.txt
.cargo/: config.toml
docs/: note.md
src/: graphics.rs  link.ld  logo.txt  main.rs  printf.rs  timer.rs
src/boards/: qemu.rs  raspi4.rs
src/boards/qemu/driver/: framebuffer.rs  gpio.rs  mod.rs  uart.rs
src/boards/raspi/driver/: framebuffer.rs  gpio.rs  mod.rs  uart.rs
src/boards/raspi4/driver/: framebuffer.rs  gpio.rs  mod.rs  uart.rs
src/boot/: boot.S
src/driver/: gpio.rs  mod.rs  uart.rs
src/games/: snake.rs
src/mm/: mod.rs
src/snake/: mod.rs
