[package]
name = "raspi4-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.5"
allocator = { git = "https://github.com/Ko-oK-OS/allocator.git" }


[features]
board_qemu = []
board_raspi4 = []


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[target.'cfg(target_arch = "aarch64")'.dependencies]
bcm2711 = { path = "bcm2711"  }
