[package]
name = "mini-game-os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.5"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
allocator = { git = "https://github.com/Ko-oK-OS/allocator.git" }
embedded-graphics  = "0.7.1" 
raspiberry-peripherals = { path = "raspiberry-peripherals", default-features = false}
rand = { version = "0.8.5", default-features = false, features = ["alloc", "small_rng"] }

[features]
board_qemu = [
    "raspiberry-peripherals/raspi3"
]
board_raspi4 = [
    "raspiberry-peripherals/raspi4"
]


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
